# scz-stratification-engine

./: .gitignore  README.md  pyproject.toml
.github/workflows/: ci.yml
config/: benchmark_v0.toml  strict_open_v0.toml
data/curated/benchmark/: README.md  dataset_registry.csv
data/curated/strict_open/: README.md
data/processed/benchmark/: README.md
data/processed/strict_open/: README.md
data/raw/benchmark/: README.md
docker/: Dockerfile.gpu  README.md
docs/: benchmark_claim.md  benchmark_claim_levels.md  benchmark_cross_sectional_report.md  benchmark_eval_protocol.md  benchmark_harmonization.md  benchmark_pivot_roadmap.md  benchmark_representations.md  benchmark_schema.md  dataset_matrix.md  strict_open_claim.md  strict_open_eval_protocol.md  strict_open_execution_stack.md  strict_open_pr_roadmap.md  strict_open_scope.md  strict_open_sources.md  target_outcomes.md
examples/benchmark_v0/: README.md
examples/strict_open_v0/: README.md
src/scz_audit_engine/: __init__.py  cli.py
src/scz_stratification_engine/: __init__.py  cli.py
tests/: test_docs_presence.py
tests/benchmark/: test_cli.py  test_dataset_audit.py  test_dataset_registry.py  test_harmonize.py  test_paths.py  test_provenance.py  test_representations.py  test_run_benchmark.py  test_run_manifest.py  test_schema.py  test_sources.py  test_splits.py
tests/strict_open/: __init__.py  test_audit.py  test_baselines.py  test_cli.py  test_features.py  test_harmonize.py  test_paths.py  test_provenance.py  test_run_manifest.py  test_schema.py  test_sources.py  test_splits.py  test_targets.py
(+138 files in other folders)
