[build-system]
requires = ["setuptools>=69"]
build-backend = "setuptools.build_meta"

[project]
name = "scz-stratification-engine"
version = "0.0.0"
description = "Docs/bootstrap for the strict-open v0 public feasibility engine."
readme = "README.md"
requires-python = ">=3.11"

[project.optional-dependencies]
test = ["pytest>=8,<9"]

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.setuptools]
py-modules = []
