[build-system]
requires = ["setuptools>=69"]
build-backend = "setuptools.build_meta"

[project]
name = "scz-audit-engine"
version = "0.0.0"
description = "Docs/bootstrap for the strict-open v0 cognitive stability and trial-noise audit engine."
readme = "README.md"
requires-python = ">=3.11"

[project.scripts]
scz-audit = "scz_audit_engine.cli:main"

[project.optional-dependencies]
test = ["pytest>=8,<9"]

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
